--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
     <link rel="stylesheet" href="assets/css/style.css" />
   </head>
   <body>
-    <section >
+    <section>
       <div class="container">
+        <h1 class="container-heading">Add Your Task!!!</h1>
         <div class="wrapper">
-        <div class="input-btn">
-          <input placeholder="Enter Your Task" id="inputText" />
-          <button class="btn" id="addBtn">Add</button>
-        </div>
-        <div class="listsOfTodo">
-          <ul id="todoList">
-          </ul>
-        </div>
+          <div class="input-btn">
+            <input placeholder="Enter Your Task" id="inputText" />
+            <button class="btn" id="addBtn">+</button>
+          </div>
+          <div class="listsOfTodo">
+            <ul id="todoList"></ul>
+          </div>
         </div>
       </div>
       <script src="assets/js/main.js"></script>
